--- a/index.html
+++ b/index.html
@@ -5,33 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Color Bottle Match</title>
 
-    <!-- Manifest -->
-    <link
-      rel="manifest"
-      href="https://bottle-match-game.vercel.app/manifest.json"
-    />
-
-    <!-- Farcaster Frame tags -->
-    <meta name="fc:frame" content="vNext" />
-    <meta property="og:title" content="Bottle Match Game" />
-    <meta
-      property="og:description"
-      content="Tap bottles, beat the clock, and mint your score as an NFT on Base!"
-    />
-    <meta
-      property="og:image"
-      content="https://bottle-match-game.vercel.app/preview.png"
-    />
-    <meta
-      property="fc:frame:image"
-      content="https://bottle-match-game.vercel.app/preview.png"
-    />
-    <meta
-      property="fc:frame:post_url"
-      content="https://bottle-match-game.vercel.app/api/frame"
-    />
-    <meta property="fc:frame:button:1" content="Play Bottle Match" />
-
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@400;500;700&display=swap"
@@ -43,8 +16,27 @@
 
     <!-- Ethers (v5 UMD) -->
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-  </head>
 
+    <!-- Farcaster Frame Metadata -->
+    <meta name="fc:frame" content="vNext" />
+    <meta
+      name="fc:frame:image"
+      content="https://color-bottle-match.vercel.app/screenshot1.png"
+    />
+    <meta name="fc:frame:button:1" content="Play Game" />
+    <meta name="fc:frame:button:1:action" content="launch_miniapp" />
+
+    <!-- Open Graph Metadata for embeds -->
+    <meta property="og:title" content="Color Bottle Match" />
+    <meta
+      property="og:description"
+      content="Match colored bottles in 30 seconds and mint your scorecard as an NFT!"
+    />
+    <meta
+      property="og:image"
+      content="https://color-bottle-match.vercel.app/screenshot1.png"
+    />
+  </head>
   <body>
     <div id="game-wrapper">
       <h1>Color Bottle Match</h1>
