Updated Farcaster deployment

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="fc:frame" content="vNext" />
     <meta
       name="fc:frame:image"
-      content="https://color-bottle-match.vercel.app/screenshot1.png"
+      content="https://color-bottle-match-nx4y.vercel.app/screenshot1.png"
     />
     <meta name="fc:frame:button:1" content="Play Game" />
     <meta name="fc:frame:button:1:action" content="launch_miniapp" />
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="https://color-bottle-match.vercel.app/screenshot1.png"
+      content="https://color-bottle-match-nx4y.vercel.app/screenshot1.png"
     />
   </head>
   <body>
