Added Farcaster SDK and manifest link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Manifest for Farcaster -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Farcaster SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@farcaster/frame-sdk/dist/index.min.js"></script>
+
     <!-- Ethers (v5 UMD) -->
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 
